<resources>
    <string name="app_name">PaperOrPlasticApp</string>
    <string name="title_activity_main_sign_in">Sign-in</string>
    <string name="title_activity_continue">Continue</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_lists">Lists</string>

    <string name="title_activity_list_items">Grocery List Items</string>
    <string name="title_activity_grocery_lists">Grocery Lists</string>
    <string name="title_activity_grocery_lists_settings">Grocery Lists Settings</string>
    <string name="title_activity_grocery_list_items">Grocery Lists Items</string>


    <string name="title_activity_kitchen_inventories">Kitchen Inventories</string>
    <string name="title_activity_kitchen_inventory_settings">Kitchen Inventory Settings</string>
    <string name="title_activity_kitchen_inventory_items">Kitchen Inventory Items</string>


    <string name="title_activity_nutrition">Nutrition</string>
    <string name="title_activity_nutrition_settings">Nutrition Settings</string>
    <string name="title_activity_total_nutrition">Total Nutrition</string>

    <string name="title_activity_coupons">Coupons</string>
    <string name="title_activity_coupons_settings">Coupon Settings</string>

    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipes_settings">Recipe Settings</string>



    <string name="title_activity_item_search">Search</string>

    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>
    <string name="sNewGame">New Game</string>
    <string name="sContinue">Continue</string>
    <string name="sContinueOffline">Continue Offline</string>
    <string name="sRules">Rules</string>
    <string name="sAbout">About</string>
    <string name="sSettings">Settings</string>

    <string name="sMyList">My List</string>
    <string name="sGList">Grocery List</string>
    <string name="sGListSettings">Grocery List Settings</string>
    <string name="sKInv">Kitchen Inv.</string>
    <string name="sKInvSettings">Kitchen Inv. Settings</string>
    <string name="sNutrition">Nutrition</string>
    <string name="sNutritionSettings">Nutrition Settings</string>
    <string name="sCoupons">Coupons</string>
    <string name="sCouponsSettings">Coupons Settings</string>
    <string name="sRecipes">Recipes</string>
    <string name="sRecipesSettings">Recipes Settings</string>
    <string name="sTotalNutrition">Total Nutrition</string>

    <string name="sExit">Exit</string>
    <string name="sGameDifficulty">Game Difficulty</string>
    <string name="sSignIn">Sign-In</string>
    <string name="sCreateAccount">Create Account</string>
    <string name="sRememberPass">Remember Password?</string>
    <string name="sRecoverPass">Recover Password</string>
    <string name="sDelete">X</string>

    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="qty">Qty</string>
    <string name="delete">Delete</string>
    <string name="sAddItem">+ Item</string>
    <string name="sAddList">+ List</string>
    <string name="sEdit">Edit</string>
    <string name="passRecover">Recover Password</string>

    <string name="sSearchBar" formatted="false">Item Name...</string>

    <string name="sSearchHint">Not Case Sens</string>

    <string name="sReturnToSignin">Return to Sign-in</string>

    <string name="sCreatedByAuthors">Created By:\nBrianna Alcoran\nAbby Jones\nKevin Jo\nLauren Sullivan\nEvan Heydemann</string>

    <string name="sDuplicateListError">The list could not be added because there is already a list with that name. Please select a different name.</string>
    <string name="sLengthofList">The list name was too long, so the name was shortened to</string>

    <string name="sDuplicateItemError">The item could not be added because there is already an item with that name.</string>
    <string name="sCouldNotAddItemSinceNoListError">The item could not be added because there is no list available. Please select a list first.</string>

    <string name="sDeleteList">Are you sure you want to delete this list?</string>
    <string name="sGroupBy">Group By</string>

    <string name="sNotImplemented">This feature is not implemented.</string>

    <string-array name="gameDifficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!--
    For nutritional fact page
    -->
    <string name="sTotalFat">%15s</string>

    <string name="server_client_id">208743903372-mohql0t0q8k3c5ocpq6bte6jgno812h8.apps.googleusercontent.com</string>
    <!--<string name="server_client_id2">208743903372-qivsb5vpjal1mpgkk8l91natj3h1rd9c.apps.googleusercontent.com</string>-->



</resources>
