<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sDeleteList"
            android:id="@+id/textDeleteList"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:foregroundGravity="left|bottom|center_horizontal"
            android:elegantTextHeight="false"
            android:layout_gravity="bottom|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="98dp"
            android:layout_marginStart="98dp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:foregroundGravity="bottom|right|center_horizontal"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/cancel_button"
            android:layout_toEndOf="@+id/cancel_button" />
    </RelativeLayout>
</RelativeLayout>