<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#b8d0d4">

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:nestedScrollingEnabled="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#c4c3c3">

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:text="My Kitchen Inventory"
                android:id="@+id/kitchenInventoryText"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                android:layout_weight="24.94"
                android:layout_span="30"

                android:gravity="center_vertical|center_horizontal"
                android:textColor="#5e5e5e"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/bListSettings"
                android:background="@drawable/settings"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/bBackToHome"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/back"
                android:layout_marginTop="5dp" />

            <ToggleButton
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/sEdit"
                android:id="@+id/bEdit"
                android:onClick="onClickEditButton"
                android:textOff="@string/sEdit"
                android:textOn="@string/sEdit"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/groceryListText"
                android:layout_toEndOf="@+id/groceryListText"
                android:layout_toStartOf="@id/bListSettings"
                android:layout_toLeftOf="@id/bListSettings"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="@color/ccBlack"
                android:background="@drawable/edit_btn_toggle" />

        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:id="@+id/bAddList"
                android:textSize="17dp"
                android:text="@string/sAddList"
                android:onClick="onAddListClick" />

            <HorizontalScrollView android:layout_width="321dp"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="horizontal"
                android:layout_gravity="right"
                android:backgroundTint="#48928d"
                android:backgroundTintMode="multiply"
                android:foregroundGravity="left"
                android:scrollIndicators="right">

                <TabWidget android:id="@android:id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.ActionBar.TabBar"
                    android:foregroundGravity="top|left|bottom|right"
                    android:showDividers="beginning|end" />
            </HorizontalScrollView>

        </TableRow>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="51dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:text="Group By"
                android:id="@+id/groupByText"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="#737373"
                android:layout_alignBottom="@+id/bAddItem"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:id="@+id/GroupBySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/groupByText"
                android:layout_toEndOf="@+id/groupByText"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/bAddItem"
                android:layout_gravity="left|top"
                android:longClickable="true"
                android:layout_alignBottom="@+id/GroupBySpinner"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"
                android:text="@string/sAddItem"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onAddItemClick" />
        </RelativeLayout>

        <FrameLayout android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <fragment
                android:layout_width="wrap_content"
                android:layout_height="393dp"
                android:name="android.app.ListFragment"
                android:id="@+id/fragment"
                android:layout_gravity="left|top"
                tools:layout="@layout/design_navigation_menu" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/listView"
                android:layout_gravity="left|top" />

        </FrameLayout>

    </LinearLayout>
</TabHost>